Resolve service type from anonymous listeners